# django-chats

./: .gitignore  .gitmodules  README.md  pyproject.toml
base_chat/: manage.py  run.py
base_chat/api/: admin.py  models.py  serializers.py  urls.py  views.py
base_chat/base_chat/: asgi.py  settings.py  urls.py  wsgi.py
base_chat/chat/: consumers.py  middleware.py  routing.py  views.py
